k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: flowdesk.example.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
